--- a/Client/index.html
+++ b/Client/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" href="./src/Components/CSS/Logo.png" type="image/png">
     <title>LOKVANI</title>
+
   </head> 
   <body>
     <div id="root"></div>
